Update README to clarify environment variable setup and improve application run instructions